--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -9,6 +9,70 @@
     android:background="@drawable/bg_battlepage"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView_battle_turn"
+        android:layout_alignParentEnd="true">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/battle_player_area_margin_top"
+                android:layout_marginRight="@dimen/battle_player_area_margin_left">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/battle_player_area_margin_left">
+                    <mangoabliu.finalproject.Layout.CardLayout
+                        android:layout_width="@dimen/battle_card_width"
+                        android:layout_height="@dimen/battle_card_height"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/card_battle_otherside_card_1"
+                        >
+
+                    </mangoabliu.finalproject.Layout.CardLayout>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/battle_player_area_margin_left">
+                    <mangoabliu.finalproject.Layout.CardLayout
+                        android:layout_width="@dimen/battle_card_width"
+                        android:layout_height="@dimen/battle_card_height"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/card_battle_otherside_card_2"
+                        >
+
+                    </mangoabliu.finalproject.Layout.CardLayout>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/battle_player_area_margin_left">
+
+                    <mangoabliu.finalproject.Layout.CardLayout
+                        android:layout_width="@dimen/battle_card_width"
+                        android:layout_height="@dimen/battle_card_height"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/card_battle_otherside_card_3"
+                        >
+
+                    </mangoabliu.finalproject.Layout.CardLayout>
+                </RelativeLayout>
+
+            </TableRow>
+        </TableLayout>
+    </RelativeLayout>
+
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
@@ -106,11 +170,12 @@
             </TableRow>
         </TableLayout>
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relativeLayout_battle_waiting_bg_down"
-        android:background="@drawable/battle_waiting_bg_down"
+        android:background="@drawable/battle_searching_down"
         android:layout_below="@+id/relativeLayout_battle_waiting_bg_up"
         android:layout_alignParentStart="true">
 
@@ -121,7 +186,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relativeLayout_battle_waiting_bg_up"
-        android:background="@drawable/battle_waiting_bg_up"
+        android:background="@drawable/battle_searching_up"
         android:layout_above="@+id/textView_battle_turn"
         android:layout_alignParentStart="true">
     </RelativeLayout>
