user profile  显示还是有bug

--- a/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
@@ -48,9 +48,9 @@
             android:layout_marginBottom="@dimen/userfile_scroll_marginBottom"
             android:layout_marginStart="@dimen/userfile_scroll_marginHorizontal"
             android:layout_marginEnd="@dimen/userfile_scroll_marginHorizontal"
-            android:columnWidth="400dp"
+            android:columnWidth="100dp"
             android:numColumns="3"
-            android:stretchMode="none"
+            android:stretchMode="spacingWidthUniform"
             android:horizontalSpacing="5dp"
             android:verticalSpacing="5dp"
             android:layout_gravity="center"
