--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -73,27 +73,30 @@
         </TableLayout>
     </RelativeLayout>
 
+
     <mangoabliu.finalproject.Layout.FontTextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView_battle_turn" />
+        android:id="@+id/textView_battle_turn"
+        />
 
-    <!--等待另一边选卡-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/relativeLayout_battle_waiting_otherside"
-        android:background="@drawable/battle_waiting">
+        android:background="@drawable/battle_waiting_otherside"
+        android:layout_above="@+id/textView_battle_turn"
+        android:layout_alignParentStart="true">
     </RelativeLayout>
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayout_battle_waiting_otherside"
+        android:layout_below="@+id/textView_battle_turn"
         android:layout_alignParentStart="true">
 
         <TableLayout
@@ -178,7 +181,6 @@
         android:background="@drawable/battle_searching_down"
         android:layout_below="@+id/relativeLayout_battle_waiting_bg_up"
         android:layout_alignParentStart="true">
-
     </RelativeLayout>
 
     <!--Searching bg up-->
@@ -195,7 +197,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/battle_border1"/>
+        android:background="@drawable/battle_border1"
+        android:id="@+id/imageView_battle_border"/>
 
     <!--"Searching rotate icon"-->
     <ImageView
