--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialogFull"
     android:orientation="vertical"
     android:layout_width="@dimen/location_side"
     android:layout_height="@dimen/location_side"
@@ -18,6 +19,15 @@
         android:textColor="@android:color/white"
         android:background="@color/transparent"/>
 
+    <ImageView
+        android:id="@+id/expanded_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible"
+        />
+
 
     <RelativeLayout
         android:layout_width="@dimen/location_inner_width"
@@ -27,13 +37,16 @@
         android:paddingEnd="@dimen/location_inner_padding"
         android:paddingBottom="@dimen/location_inner_padding">
 
-        <ImageView
+
+
+        <ImageButton
             android:id="@+id/locationImage"
             android:layout_width="@dimen/location_img_width"
             android:layout_height="@dimen/location_img_height"
             android:src="@drawable/card_back"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitCenter"/>
 
         <Button
             android:id="@+id/dropCard"
