--- a/MyApplication_V1/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/password"
                 android:textColor="@color/clr_login_text"
-                android:text="@string/login_cipher_pw" />
+                android:text="@string/login_cipher_pw"
+                android:textSize="@dimen/cb_text"/>
 
         </RelativeLayout>
 
