--- a/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
@@ -118,7 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/passwordRegisterConfirm"
                 android:textColor="@color/clr_register_text"
-                android:text="@string/login_cipher_pw"/>
+                android:text="@string/login_cipher_pw"
+                android:textSize="@dimen/cb_text"/>
 
         </RelativeLayout>
 
