--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="content_innerwidth">275dp</dimen>
     <dimen name="btn_side">60dp</dimen>
     <dimen name="label_text">16sp</dimen>
+    <dimen name="cb_text">16sp</dimen>
 
     <dimen name="login_padding_top">25dp</dimen>
     <dimen name="login_padding_left">15dp</dimen>
@@ -90,7 +91,7 @@
     <dimen name="location_btn_margin">15dp</dimen>
     <dimen name="location_img_width">100dp</dimen>
     <dimen name="location_img_height">120dp</dimen>
-    <dimen name="location_text">24sp</dimen>
+    <dimen name="location_text">28sp</dimen>
     <dimen name="location_text_width">200dp</dimen>
     <dimen name="location_text_height">40dp</dimen>
     <dimen name="location_text_marginStart">50dp</dimen>
