--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -74,7 +74,7 @@
 
 
     <Button
-        android:id="@+id/locationGo"
+        android:id="@+id/locationAction"
         android:layout_width="@dimen/location_btn_go"
         android:layout_height="@dimen/location_btn_go"
         android:layout_alignParentBottom="true"
