--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -42,25 +42,23 @@
         android:paddingBottom="@dimen/location_inner_padding">
 
 
-
         <ImageButton
             android:id="@+id/locationImage"
             android:layout_width="@dimen/location_img_width"
             android:layout_height="@dimen/location_img_height"
             android:src="@drawable/card_back"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:scaleType="fitCenter"
             android:background="@color/transparent"/>
 
-        <ImageButton
-            android:id="@+id/dropCard"
-            android:background="@drawable/btn_drop"
-            android:layout_width="@dimen/location_btn_drop_width"
-            android:layout_height="@dimen/location_btn_drop_height"
-            android:layout_marginStart="20dp"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/locationImage" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/dropCard"-->
+            <!--android:background="@drawable/btn_drop"-->
+            <!--android:layout_width="@dimen/location_btn_drop_width"-->
+            <!--android:layout_height="@dimen/location_btn_drop_height"-->
+            <!--android:layout_marginStart="20dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_toEndOf="@+id/locationImage" />-->
         <!--<Button-->
             <!--android:id="@+id/locationDialogCancel"-->
             <!--android:layout_width="wrap_content"-->
@@ -73,7 +71,7 @@
     </RelativeLayout>
 
 
-    <Button
+    <ImageView
         android:id="@+id/locationAction"
         android:layout_width="@dimen/location_btn_go"
         android:layout_height="@dimen/location_btn_go"
@@ -81,9 +79,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/location_btn_margin"
         android:layout_marginEnd="@dimen/location_btn_margin"
-        android:background="@color/btn_test"
-        android:text="@string/Go"
-        android:textColor="#FFF"
+        android:background="@color/transparent"
         />
 
 
