--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -85,8 +85,8 @@
     <!-- dialog_location -->
     <dimen name="location_side">300dp</dimen>
     <dimen name="location_inner_width">200dp</dimen>
-    <dimen name="location_inner_height">130dp</dimen>
-    <dimen name="location_inner_padding">10dp</dimen>
+    <dimen name="location_inner_height">150dp</dimen>
+    <dimen name="location_inner_margin">10dp</dimen>
     <dimen name="location_btn_go">60dp</dimen>
     <dimen name="location_btn_margin">15dp</dimen>
     <dimen name="location_img_width">100dp</dimen>
