--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -68,15 +68,17 @@
     <dimen name="battle_searching_icon">128dp</dimen>
     <dimen name="battle_planet_width">150dp</dimen>
     <dimen name="battle_planet_height">37dp</dimen>
+    <dimen name="battle_btn_exit_width">60dp</dimen>
+    <dimen name="battle_btn_exit_height">50dp</dimen>
 
     <!-- activity_carddrop -->
     <dimen name="carddrop_icon_width">60dp</dimen>
     <dimen name="carddrop_icon_height">60dp</dimen>
     <dimen name="carddrop_icon_marginTop">10dp</dimen>
     <dimen name="carddrop_icon_marginStart">10dp</dimen>
-    <dimen name="carddrop_btn_width">40dp</dimen>
-    <dimen name="carddrop_btn_height">30dp</dimen>
-    <dimen name="carddrop_btn_marginTop">20dp</dimen>
+    <dimen name="carddrop_btn_width">60dp</dimen>
+    <dimen name="carddrop_btn_height">50dp</dimen>
+    <dimen name="carddrop_btn_marginBottom">20dp</dimen>
     <dimen name="carddrop_btn_marginEnd">20dp</dimen>
     <dimen name="carddrop_cardlayout_width">130dp</dimen>
     <dimen name="carddrop_cardlayout_height">200dp</dimen>
