--- a/MyApplication_V1/app/src/main/res/drawable/po_seekbar.xml
+++ b/MyApplication_V1/app/src/main/res/drawable/po_seekbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/background">
         <shape>
-            <solid android:color="#ff51495e" />
+            <solid android:color="#ff51495e" />   //#ff51495e
         </shape>
     </item>
     <item android:id="@+id/secondaryProgress">
